--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/Sttorek/st-tech-blog#readme",
   "dependencies": {
+    "connect-session-sequelize": "^7.1.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.0",
     "mysql2": "^2.2.5",
