--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^5.3.0",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
+    "path": "^0.12.7",
     "sequelize": "^6.6.2"
   }
 }
